einstellung/src/snapshots/einstellung__tests__user_config_option_allowed_empty.snap
---
source: einstellung/src/tests.rs
expression: "print_res(res, true)"
---
pass:
UserConfig4 {
    users: None,
}
