einstellung/src/snapshots/einstellung__tests__user_config_option_no_default.snap
---
source: einstellung/src/tests.rs
expression: "print_res(res, true)"
---
pass:
UserConfig3 {
    users: Some(
        {
            "bob",
            "root",
        },
    ),
}
