einstellung/src/snapshots/einstellung__tests__validation_fail.snap
---
source: einstellung/src/tests.rs
expression: "print_res(res, false)"
---
error:
configuration source inline json: Validation failed for field 'AppConfig::network::listen::address': Address must not be a multicast address
Source {
    source: ConfigSource {
        label: "inline json",
    },
    error: Validation {
        field: FieldPath {
            base_type: "AppConfig",
            field: "address",
            path: [
                "listen",
                "network",
            ],
        },
        reason: "Address must not be a multicast address",
    },
}
